--- a/package.json
+++ b/package.json
@@ -3,16 +3,26 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-three/drei": "^9.32.6",
+    "@react-three/fiber": "^8.8.7",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "@types/jest": "^29.1.1",
+    "@types/lodash": "^4.14.186",
     "@types/node": "^18.7.23",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
+    "@types/three": "^0.144.0",
+    "lodash": "^4.17.21",
+    "mobx": "^6.3.3",
+    "mobx-persist": "^0.4.1",
+    "mobx-react-lite": "^3.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "sass": "^1.55.0",
+    "three": "^0.145.0",
     "typescript": "^4.8.4",
     "web-vitals": "^2.1.0"
   },
@@ -39,5 +49,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.12",
+    "postcss": "^8.4.17",
+    "tailwindcss": "^3.1.8"
   }
 }
