--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
     "@types/three": "^0.144.0",
+    "axios": "^0.27.2",
     "lodash": "^4.17.21",
     "mobx": "^6.3.3",
     "mobx-persist": "^0.4.1",
