--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "mobx-react-lite": "^3.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-ripples": "^2.2.1",
     "react-scripts": "5.0.1",
     "sass": "^1.55.0",
     "three": "^0.145.0",
+    "troika-three-text": "^0.46.4",
     "typescript": "^4.8.4",
     "web-vitals": "^2.1.0"
   },
