--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "react-dom": "^18.2.0",
     "react-ripples": "^2.2.1",
     "react-scripts": "5.0.1",
+    "react-type-animation": "^2.1.1",
+    "remixicon": "^2.5.0",
     "sass": "^1.55.0",
     "three": "^0.145.0",
     "troika-three-text": "^0.46.4",
